[package]
name = "dungeon_digger"
version = "0.1.0"
edition = "2021"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "0.8.5"
bevy = "0.7"
bevy-inspector-egui = "0.11.0"
bevy_asset_loader = "0.11.0"
